# blockchain

./: Block.cpp  Blockchain.cpp  BlockchainCommand.cpp  BlockchainNetwork.cpp  CMakeLists.txt  Command.cpp  CreateTransactionCommand.cpp  GetBlockchainCommand.cpp  GetFilesListCommand.cpp  ListFilesCommand.cpp  PeerReceiver.cpp  PeerSender.cpp  PrintBlockchainCommand.cpp  ReadFileCommand.cpp  ReceiveFileCommand.cpp  ReplaceBlockchainCommand.cpp  StringHelper.cpp  main.cpp
headers/: Block.h  Blockchain.h
include/: Block.h  Blockchain.h  BlockchainCommand.h  BlockchainNetwork.h  Color.h  Command.h  PeerReceiver.h  PeerSender.h  StringHelper.h  TransactionData.h
include/commands/: CreateTransactionCommand.h  GetBlockchainCommand.h  GetFilesListCommand.h  ListFilesCommand.h  PrintBlockchainCommand.h  ReadFileCommand.h  ReceiveFileCommand.h  ReplaceBlockchainCommand.h
include/domain/: Peer.h
nodeServer/: index.js  package-lock.json  package.json
nodeServer/controllers/: awesomeCoinController.js  blockchainController.js
nodeServer/domain/: awesomeBlock.js  awesomecoin.js  block.js  blockchain.js  transaction.js
shared/: sample.txt
smartContracts/: awwesomeCoin_ICO.sol
src/: Block.cpp  Blockchain.cpp  BlockchainCommand.cpp  BlockchainNetwork.cpp  Command.cpp  CreateTransactionCommand.cpp  GetBlockchainCommand.cpp  GetFilesListCommand.cpp  ListFilesCommand.cpp  PeerReceiver.cpp  PeerSender.cpp  PrintBlockchainCommand.cpp  ReadFileCommand.cpp  ReceiveFileCommand.cpp  ReplaceBlockchainCommand.cpp  StringHelper.cpp  main.cpp
